--- a/amor.html
+++ b/amor.html
@@ -18,6 +18,6 @@
     Seu navegador não suporta áudio.
   </audio>
 
-  <script src="Script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
